# budgie-desktop

./: BudgieApplet.html  BudgiePlugin.html  BudgiePopoverManager.html  index.html  object-tree.html
src/: com.solus-project.budgie.gschema.xml  meson.build
src/applets/icon-tasklist/: Application.vala  ApplicationWindowListeners.vala  Buttons.vala  IconTasklistApplet.vala  UrgencyAnimation.vala  WindowListItem.vala  WindowListView.vala  WindowMenu.vala  meson.build
src/applets/status/: SoundIndicator.vala  meson.build
src/panel/: panel.vala
src/panel/applets/icon-tasklist/: Application.vala  ApplicationWindow.vala  Buttons.vala  IconTasklistApplet.vala  Makefile.am  WindowListItem.vala  WindowMenu.vala
src/raven/: meson.build  sound.vala  sound_util.vala
